# Rhook

./: .gitignore  CHANGELOG  CHANGELOG.rs  Cargo.toml  README.md
examples/: dump_reads.rs  fake_cat.rs  fake_env.rs  hooks.rs  multi_hooks.rs  multithread.rs
gen_fns/: libc_fns_list  libc_fns_return_type_list  libc_fns_type_list  libc_fns_vars_and_return_types
src/: hook.rs  lib.rs  libc.rs  libcfn.rs  scaffold.rs
tests/: hooks.rs
