[package]
name = "rhook"
version = "0.4.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
description = "Hook libc functions with an easy API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7.2"
